<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView

        android:id="@+id/texttitle"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:text="@string/tic_tac_toe"

        android:layout_centerHorizontal="true"

        android:textSize="36sp"

        android:textStyle="bold"

        android:textColor="#cc1234"

        android:fontFamily="cursive"

        />

    <GridLayout
        android:layout_width="350dp"
        android:layout_height="350dp"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"
        android:background="@drawable/tictac"
        android:columnCount="3"
        android:rowCount="3"
        android:id="@+id/gridLayout">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="25dp"
            android:layout_row="0"
            android:layout_column="0"
            android:onClick="dropIn"
            android:tag="0"
            android:contentDescription="@string/empty_cell_0" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="1"
            android:layout_marginStart="35dp"
            android:contentDescription="@string/empty_cell_1"
            android:layout_marginTop="25dp"
            android:layout_row="0"
            android:onClick="dropIn"
            android:tag="1"
            />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="2"
            android:layout_marginStart="35dp"
            android:contentDescription="@string/empty_cell_2"
            android:onClick="dropIn"
            android:layout_marginTop="25dp"
            android:layout_row="0"
            android:tag="2"
            />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_row="1"
            android:layout_marginStart="35dp"
            android:layout_column="0"
            android:layout_marginTop="40dp"
            android:onClick="dropIn"
            android:tag="3"
            android:contentDescription="@string/empty_cell_3"/>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="1"
            android:layout_marginStart="35dp"
            android:onClick="dropIn"
            android:layout_marginTop="40dp"
            android:layout_row="1"
            android:tag="4"
            android:contentDescription="@string/empty_cell_4"
            />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="2"
            android:onClick="dropIn"
            android:layout_marginStart="35dp"
            android:layout_marginTop="40dp"
            android:layout_row="1"
            android:tag="5"
            android:contentDescription="@string/empty_cell_5"
            />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="70dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_height="70dp"
            android:onClick="dropIn"
            android:layout_marginStart="25dp"
            android:layout_marginTop="45dp"
            android:tag="6"
            android:contentDescription="@string/empty_cell_6"
            />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_row="2"
            android:layout_column="1"
            android:onClick="dropIn"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:tag="7"
            android:contentDescription="@string/empty_cell_7"
            />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_row="2"
            android:layout_column="2"
            android:onClick="dropIn"
            android:layout_marginStart="35dp"
            android:layout_marginTop="45dp"
            android:tag="8"
            android:contentDescription="@string/empty_cell_8"/>
    </GridLayout>

    <LinearLayout
        android:id="@+id/winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/winner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/winner"
            android:layout_gravity="center"
            android:textSize="24sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_again"
            android:onClick="playAgain"/>

        <TextView
            android:id="@+id/player1Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player1_score"
            android:textSize="18sp"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:id="@+id/player2Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player2_score"
            android:textSize="18sp"/>


    </LinearLayout>


</RelativeLayout>